fix gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,7 +1,8 @@
 .catalog {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 48px;
+  // gap: 48px;
+  // column-gap: 48px;
   flex-wrap: wrap;
 
   max-width: 944px;
